style.css
html {
    padding: 0;
    margin: 0;
}
body {
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-weight: 200;
    background-color: #dcdcdf;
    color: #111;
    letter-spacing: -0.02em;
    padding: 0 0 2em;
    margin: 0; 
}

/** responsive-ish **/
@media(max-width:767px) {
    body {
        font-size: 20px;
    }
}
@media(min-width:768px) {
    body {
        font-size: 24px;
    }
}
@media(min-width:992px) {
    body {
        font-size: 28px;
    }
}

.nav, .header, .main {
    padding: 0 0.2em;
    margin: 0 auto;
    max-width: 30em;
}  

.tweet {
    padding: 0.6em 1em 0.8em;
    margin: 0.4em 0;
    border-radius: 0.5em;
    background-color: #ececef;
    transition: background-color 2s;

}
.tweet:hover {
    background-color: #fff;
    transition: 0.1s;
}

.user {
    font-size: 0.8em;
    color: #249;
    cursor: pointer;
    transition: 0.2s;

}
.user:hover {
    color: #44AAEE;
    transition: 0.2s;
}

.time {
    font-size: 0.6em;
    color: #aab;
    margin-left: 1em;
}
.message {
    display: block;
    padding: 0.2em;
    color: #222;
}


.top {
    background-color: #44AAEE;
    width: 100%;
    padding: 0.1em;
    margin: 0 auto;
    height: 1.5em;
}

h1 {
    margin: 0;
    color: #fff;
    font-size: 1.3em;
    letter-spacing: -0.03em;
    font-weight: bold;
    cursor: pointer;
    float: left;
    font-style: italic;
    transition: 3s;
}
h1:hover {
    letter-spacing: -0.05em;
    transition: 0.5s;
}

.page {
    color: #444;
    font-weight: bold;
    font-size: 1.3em;
    padding-top: 0.3em;
    display: block;
    letter-spacing: -0.02em;
    margin: 0 auto;
}

/***** user tweets *****/

.write {
}

form {
    float:right;
}

form input, form button {
    font-size: 16px;
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    border: none;
    padding: 0.5em;
    border-radius: 0.5em;
    outline: none;

}

form input {
    border: none;
    padding: 0.5em;
}

form button {
    background-color: #ec0;
    color: #fff;
    cursor: pointer;
    font-style: italic;
    font-weight: bold;
    transition: 0.2s;

}

form button:hover {
    background-color: #fd3;
    transition: 0.2s;
}

#username {
    display: none;
}

